Se sube la correcion para subir archivos, de igual manera se crea microservicio que funcionara como gateway

--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
   <modules>
     <module>ms-administracion</module>
     <module>ms-archivos</module>
+    <module>ms-gateway</module>
   </modules>
 
 </project>
